# qt-cpp-multithreading-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThreadController.cpp  main.cpp  main.qml  worker_thread.cpp  worker_thread.h
src/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  TaskModel.cpp  TaskModel.h  ThreadController.cpp  ThreadController.h
src/task_queue/: CMakeLists.txt  task_queue.cpp  task_queue.h
src/ui/: CMakeLists.txt  Main.qml  TaskCard.qml
src/worker/: CMakeLists.txt  worker_thread.cpp  worker_thread.h
